# proxy-wrapper

./: .gitignore  CMakeLists.txt  ProxyWrapper.cpp  README.md  license.txt
cmake/: Findlibproxy.cmake  proxywrapper-config.cmake
include/: ProxyWrapper.h
src/: ProxyWrapper.cpp
